2011-02-13  Nico Weber  <thakis@chromium.org>

Reviewed by Anders Carlsson.

        RenderBR::width() tries but fails to override RenderText::width()
        https://bugs.webkit.org/show_bug.cgi?id=54301

        The superclass method's signature changed, e.g. in
        http://trac.webkit.org/changeset/57215, but the subclass was not
        updated.

        * rendering/RenderBR.h:
        (WebCore::RenderBR::width):


Canonical link: https://commits.webkit.org/68447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78444 268f45cc-cd09-0410-ab3c-d52691b4dbfc